fix(pill): set max-width on host
This will cause the pill to truncate when it exceeds
 the width of its container.

--- a/packages/pharos/src/components/pill/pill.scss
+++ b/packages/pharos/src/components/pill/pill.scss
@@ -3,6 +3,7 @@
 
 :host {
   display: inline-block;
+  max-width: 100%;
 }
 
 .pill {
